lots of changes. includes some code that's commented out for future reference

--- a/css/style.css
+++ b/css/style.css
@@ -12,4 +12,30 @@ html, body {
     position: absolute;
     top: 0px;
     right: 0px;
+    background: aliceblue;
+}
+li .destroy {
+    display: none;
+    position: relative;
+    top: 0;
+    right: 10px;
+    bottom: 0;
+    width: 40px;
+    height: 40px;
+    margin: auto 0;
+    font-size: 30px;
+    color: #cc9a9a;
+    margin-bottom: 11px;
+    transition: color 0.2s ease-out;
+}
+.destroy:hover {
+    color: #af5b5e;
+}
+
+.destroy:after {
+    content: '×';
+}
+
+li:hover .destroy {
+    display: block;
 }
